Fix idea warnings